2006-04-18  Heikki Junes  <hjunes@cc.hut.fi>

	* scripts/GNUmakefile: revert last "fix", which rather broke make.
	Earlier successive `make' commands finally compiled ok.

	* Documentation/topdocs/INSTALL.texi: require mftrace 1.1.19.

2006-04-18  Erlend Aasland <erlenda@gmail.com>

	* lily/include/stem-tremolo.hh:
	* lily/stem-tremolo.cc: move rotated_box () to Lookup:: and update
	callers.

	* lily/lookup.cc: add rotated_box ()
	* lily/include/lookup.hh:

2006-04-18  Heikki Junes  <hjunes@cc.hut.fi>

	* scripts/GNUmakefile: bugfix: run help2man only after scripts have 
	been generated. Fixes "can't get `--help'" bug after make clean.

	* THANKS: alphabetize contributors.

2006-04-17  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/instrument-notation.itely: added Erlend's
	tabs and banjo doc patch.  Thanks!

2006-04-17  Erlend Aasland  <erlenda@gmail.com>

	* scm/define-grobs.scm: fix stem-attachment for tablature note heads.

	* ps/music-drawing-routines.ps (draw_dashed_line): fix dash pattern bug.

	* scm/output-lib.scm: add some more predefined string tunings.

	* Documentation/user/instrument-notation.itely: and doc them.

2006-04-16  Jürgen Reuter  <reuter@ipd.uka.de>

	* ly/engraver.ly: Remove obsolete comments.

	* ly/gregorian-init.ly: Define default layout block.

	* input/puer-fragment.ly: Updated and extended.

2006-04-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lily-parser-scheme.cc: Use them to fix --output=DIR/BASE
	pdf conversion behaviour.

	* flower/file-name.cc (dir_name)
	(get_working_directory): Move from relocate.cc.

	* lily/relocate.cc (setup_paths): Remove rogue stat calls.
	
	* lily/relocate.cc: Encapsulate sys/stat.h in
	HAVE_STAT_H.

2006-04-14  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ various: small updates from Cameron
	and Juergen, thanks!

	* Documentation/user/ various: small updates of my own.

	* THANKS: 2.7 -> 2.8.

2006-04-11  Graham Percival  <gpermus@gmail.com>
