@@ -15,6 +15,7 @@ CONTRIBUTORS
 
 Erlend Aasland
 David Feuer
+Heikki Junes
 Joe Neeman
 
 
